refactor(music-map): reuse dataset for cluster analysis
